--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,11 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports here"
+    "# Part 1 - Development Notebook\n",
+    "# Criteria: Package Imports\n",
+    "import os\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "import matplotlib.pyplot as plot\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from torch import nn\n",
+    "from torch import optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets as torch_datasets\n",
+    "from torchvision import models as torch_models\n",
+    "from torchvision import transforms as torch_transforms\n",
+    "import torchvision\n",
+    "from torchvision import datasets, models, transforms"
    ]
   },
   {
@@ -50,30 +66,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
    "source": [
     "data_dir = 'flowers'\n",
-    "train_dir = data_dir + '/train'\n",
-    "valid_dir = data_dir + '/valid'\n",
-    "test_dir = data_dir + '/test'"
+    "TRAIN = 'train'\n",
+    "VALIDATE = 'valid'\n",
+    "TEST = 'test'\n",
+    "PATH = 'checkpoint.pth'\n",
+    "train_dir = os.path.join(data_dir, TRAIN)\n",
+    "valid_dir = os.path.join(data_dir, VALIDATE)\n",
+    "test_dir = os.path.join(data_dir, TEST)\n",
+    "\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c0235cf70> images under train\n",
+      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c0235cf10> images under valid\n",
+      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c00601130> images under test\n",
+      "<torch.utils.data.dataloader.DataLoader object at 0x7f8c0235cf70>\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Define your transforms for the training, validation, and testing sets\n",
-    "data_transforms = \n",
+    "data_transforms = {\n",
+    "    TRAIN: torch_transforms.Compose([torch_transforms.Resize(256),\n",
+    "                                     torch_transforms.RandomResizedCrop(224),\n",
+    "                                     torch_transforms.RandomHorizontalFlip(p=0.5),\n",
+    "                                     torch_transforms.ToTensor(),\n",
+    "                                     torch_transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                                                                std=[0.229, 0.224, 0.225])]),\n",
     "\n",
-    "# TODO: Load the datasets with ImageFolder\n",
-    "image_datasets = \n",
+    "    TEST: torch_transforms.Compose([torch_transforms.Resize(256),\n",
+    "                                    torch_transforms.RandomResizedCrop(224),\n",
+    "                                    torch_transforms.RandomHorizontalFlip(p=0.5),\n",
+    "                                    torch_transforms.ToTensor(),\n",
+    "                                    torch_transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                                                               std=[0.229, 0.224, 0.225])]),\n",
     "\n",
-    "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
-    "dataloaders = "
+    "    VALIDATE: torch_transforms.Compose([torch_transforms.Resize(256),\n",
+    "                                        torch_transforms.RandomResizedCrop(224),\n",
+    "                                        torch_transforms.RandomHorizontalFlip(p=0.5),\n",
+    "                                        torch_transforms.ToTensor(),\n",
+    "                                        torch_transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                                                                   std=[0.229, 0.224, 0.225])])\n",
+    "}\n",
+    "\n",
+    "# Data loading..\n",
+    "image_datasets = {\n",
+    "    dataset: torch_datasets.ImageFolder(\n",
+    "        root=os.path.join(data_dir, dataset),\n",
+    "        transform=data_transforms[dataset]\n",
+    "    )\n",
+    "    for dataset in [TRAIN, VALIDATE, TEST]\n",
+    "}\n",
+    "\n",
+    "# TODO: Using the image datasets and the transforms, define the data_loaders\n",
+    "data_loaders = {\n",
+    "    loader: DataLoader(image_datasets[loader], batch_size=64, shuffle=True)\n",
+    "    for loader in [TRAIN, VALIDATE, TEST]\n",
+    "}\n",
+    "\n",
+    "for x in [TRAIN, VALIDATE, TEST]:\n",
+    "    print(\"Loaded {} images under {}\".format(data_loaders[x], x))\n",
+    "\n",
+    "class_names = image_datasets[TRAIN].classes\n",
+    "train_loader = data_loaders[TRAIN]\n",
+    "valid_loader = data_loaders[VALIDATE]\n",
+    "test_loader = data_loaders[TEST]\n",
+    "\n",
+    "print(train_loader)"
    ]
   },
   {
@@ -87,14 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'21': 'fire lily', '3': 'canterbury bells', '45': 'bolero deep blue', '1': 'pink primrose', '34': 'mexican aster', '27': 'prince of wales feathers', '7': 'moon orchid', '16': 'globe-flower', '25': 'grape hyacinth', '26': 'corn poppy', '79': 'toad lily', '39': 'siam tulip', '24': 'red ginger', '67': 'spring crocus', '35': 'alpine sea holly', '32': 'garden phlox', '10': 'globe thistle', '6': 'tiger lily', '93': 'ball moss', '33': 'love in the mist', '9': 'monkshood', '102': 'blackberry lily', '14': 'spear thistle', '19': 'balloon flower', '100': 'blanket flower', '13': 'king protea', '49': 'oxeye daisy', '15': 'yellow iris', '61': 'cautleya spicata', '31': 'carnation', '64': 'silverbush', '68': 'bearded iris', '63': 'black-eyed susan', '69': 'windflower', '62': 'japanese anemone', '20': 'giant white arum lily', '38': 'great masterwort', '4': 'sweet pea', '86': 'tree mallow', '101': 'trumpet creeper', '42': 'daffodil', '22': 'pincushion flower', '2': 'hard-leaved pocket orchid', '54': 'sunflower', '66': 'osteospermum', '70': 'tree poppy', '85': 'desert-rose', '99': 'bromelia', '87': 'magnolia', '5': 'english marigold', '92': 'bee balm', '28': 'stemless gentian', '97': 'mallow', '57': 'gaura', '40': 'lenten rose', '47': 'marigold', '59': 'orange dahlia', '48': 'buttercup', '55': 'pelargonium', '36': 'ruby-lipped cattleya', '91': 'hippeastrum', '29': 'artichoke', '71': 'gazania', '90': 'canna lily', '18': 'peruvian lily', '98': 'mexican petunia', '8': 'bird of paradise', '30': 'sweet william', '17': 'purple coneflower', '52': 'wild pansy', '84': 'columbine', '12': \"colt's foot\", '11': 'snapdragon', '96': 'camellia', '23': 'fritillary', '50': 'common dandelion', '44': 'poinsettia', '53': 'primula', '72': 'azalea', '65': 'californian poppy', '80': 'anthurium', '76': 'morning glory', '37': 'cape flower', '56': 'bishop of llandaff', '60': 'pink-yellow dahlia', '82': 'clematis', '58': 'geranium', '75': 'thorn apple', '41': 'barbeton daisy', '95': 'bougainvillea', '43': 'sword lily', '83': 'hibiscus', '78': 'lotus lotus', '88': 'cyclamen', '94': 'foxglove', '81': 'frangipani', '74': 'rose', '89': 'watercress', '73': 'water lily', '46': 'wallflower', '77': 'passion flower', '51': 'petunia'}\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
     "with open('cat_to_name.json', 'r') as f:\n",
-    "    cat_to_name = json.load(f)"
+    "    cat_to_name = json.load(f)\n",
+    "print(cat_to_name)"
    ]
   },
   {
@@ -128,7 +218,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Build and train your network"
+    "# TODO: Build and train your network\n",
+    "# TODO: Build and train your network\n",
+    "# Train the classifier layers using backpropagation using the pre-trained network to get the features\n",
+    "# Track the loss and accuracy on the validation set to determine the best hyperparameters\n",
+    "from datetime import datetime\n",
+    "\n",
+    "model = torch_models.vgg16(pretrained=True)\n",
+    "model.to(device)\n",
+    "#print(model)\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "orderDict = nn.Sequential(\n",
+    "    nn.Sequential(\n",
+    "        nn.Linear(25088, 4096),\n",
+    "        nn.ReLU(),\n",
+    "        nn.Dropout(0.1),\n",
+    "        nn.Linear(4096, 102),\n",
+    "        nn.LogSoftmax(dim=1)\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "model.classifier = orderDict\n",
+    "criterion = nn.NLLLoss()\n",
+    "optimizer = optim.Adam(model.classifier.parameters(), lr=0.001)\n",
+    "\n",
+    "epochs = 5\n",
+    "batch_loss = 0\n",
+    "\n",
+    "start_time = datetime.now()\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    running_loss = 0\n",
+    "    for images, labels in train_loader:\n",
+    "        # shortcut for forward pass\n",
+    "        images = images.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "        model = model.to(device)\n",
+    "        log_ps = model(images.float())\n",
+    "        loss = criterion(log_ps, labels)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item()\n",
+    "    else:\n",
+    "        print(f\"Training loss: {running_loss}\")\n",
+    "        end_time = datetime.now()\n",
+    "        print(f\"total time taken: {end_time - start_time} for iteration: {epoch}\")"
    ]
   },
   {
@@ -146,7 +283,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Do validation on the test set"
+    "# TODO: Do validation on the test set\n",
+    "# TODO: Do validation on the test set\n",
+    "loss = 0\n",
+    "\n",
+    "total = 0\n",
+    "model.eval()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    accuracy = 0\n",
+    "    for inputs, labels in test_loader:\n",
+    "        inputs = inputs.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "        log_ps = model(inputs)\n",
+    "        out = torch.exp(log_ps)\n",
+    "        prediction = torch.argmax(out, 1)\n",
+    "        total += labels.size(0)\n",
+    "        accuracy += (prediction == labels).sum().item()\n",
+    "\n",
+    "    print(f\"Test accuracy: {accuracy * 100 / total}%\")"
    ]
   },
   {
@@ -168,7 +323,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint "
+    "# TODO: Save the checkpoint\n",
+    "# TODO: Save the checkpoint\n",
+    "\n",
+    "model = torch_models.vgg16()\n",
+    "model.class_to_idx = image_datasets['train'].class_to_idx\n",
+    "orderDict = nn.Sequential(\n",
+    "    nn.Sequential(\n",
+    "        nn.Linear(25088, 4096),\n",
+    "        nn.ReLU(),\n",
+    "        nn.Dropout(0.1),\n",
+    "        nn.Linear(4096, 102),\n",
+    "        nn.LogSoftmax(dim=1)\n",
+    "    )\n",
+    ")\n",
+    "model.classifier = nn.Sequential(orderDict)\n",
+    "\n",
+    "torch.save({'no_of_epochs': epochs,\n",
+    "            'state_dict': model.state_dict(),\n",
+    "            'class_to_idx': model.class_to_idx}, PATH)\n",
+    "print(model.class_to_idx)"
    ]
   },
   {
@@ -186,8 +360,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model"
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "def load_checkpoint(filepath):\n",
+    "    check_point = torch.load(filepath)\n",
+    "    model = torch_models.vgg16(pretrained=True)\n",
+    "\n",
+    "    orderDict = nn.Sequential(\n",
+    "        nn.Sequential(\n",
+    "            nn.Linear(25088, 4096),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.1),\n",
+    "            nn.Linear(4096, 102),\n",
+    "            nn.LogSoftmax(dim=1)\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    model.classifier = orderDict\n",
+    "    criterion = nn.NLLLoss()\n",
+    "    optimizer = optim.Adam(model.classifier.parameters(), lr=0.001)\n",
+    "\n",
+    "    model.state_dict = check_point['state_dict']\n",
+    "    model.class_to_idx = check_point['class_to_idx']\n",
+    "    return model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model = load_checkpoint(PATH)\n",
+    "print(model)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -226,12 +438,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_image(image):\n",
-    "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
-    "        returns an Numpy array\n",
-    "    '''\n",
-    "    \n",
-    "    # TODO: Process a PIL image for use in a PyTorch model"
+    "def image_processor(image_loc):\n",
+    "    size = 224, 224\n",
+    "    with Image.open(image_loc) as im:\n",
+    "        im.rotate(45)  #.show()\n",
+    "        im.thumbnail(size)\n",
+    "        img_transforms = torch_transforms.Compose([\n",
+    "            torch_transforms.Resize(256),\n",
+    "            torch_transforms.CenterCrop(224),\n",
+    "            torch_transforms.ToTensor(),\n",
+    "            torch_transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+    "        ])\n",
+    "        return img_transforms(im)"
    ]
   },
   {
@@ -247,27 +465,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def imshow(image, ax=None, title=None):\n",
-    "    \"\"\"Imshow for Tensor.\"\"\"\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots()\n",
-    "    \n",
-    "    # PyTorch tensors assume the color channel is the first dimension\n",
-    "    # but matplotlib assumes is the third dimension\n",
-    "    image = image.numpy().transpose((1, 2, 0))\n",
-    "    \n",
-    "    # Undo preprocessing\n",
+    "#Reference: https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html#visualize-a-few-images\n",
+    "def imshow(image_loc,title=None):\n",
+    "    image_loc=image_processor(image_loc)\n",
+    "    image_loc = image_loc.numpy().transpose((1, 2, 0))\n",
     "    mean = np.array([0.485, 0.456, 0.406])\n",
     "    std = np.array([0.229, 0.224, 0.225])\n",
-    "    image = std * image + mean\n",
-    "    \n",
-    "    # Image needs to be clipped between 0 and 1 or it looks like noise when displayed\n",
-    "    image = np.clip(image, 0, 1)\n",
-    "    \n",
-    "    ax.imshow(image)\n",
-    "    \n",
-    "    return ax"
+    "    inp = std * image_loc + mean\n",
+    "    image_loc = np.clip(inp, 0, 1)\n",
+    "    plt.imshow(image_loc)\n",
+    "    if title is not None:\n",
+    "        plt.title(title)\n",
+    "    plt.pause(0.001)\n",
+    "    return plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "imshow(\"flowers/test/1/image_06764.jpg\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -296,11 +521,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(image_path, model, topk=5):\n",
-    "    ''' Predict the class (or classes) of an image using a trained deep learning model.\n",
-    "    '''\n",
-    "    \n",
-    "    # TODO: Implement the code to predict the class from an image file"
+    "def predict(image_path, model, top_k=5):\n",
+    "    model=model.to('cpu')\n",
+    "    model=model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        output = model(image_processor(image_path).unsqueeze_(0))\n",
+    "\n",
+    "    ps = torch.exp(output).data\n",
+    "\n",
+    "    #According to Validation Solution of the Class\n",
+    "    top_p, top_class = ps.topk(top_k, dim=1)\n",
+    "\n",
+    "    top_p = top_p.squeeze().detach().cpu().numpy()\n",
+    "    top_class = top_class.detach().squeeze().cpu().numpy()\n",
+    "\n",
+    "    #print(f'cat_to_name: {cat_to_name}')\n",
+    "    #print(f'top_p: {top_p}')\n",
+    "    #print(f'top_class: {top_class}')\n",
+    "\n",
+    "    class_to_idx = {key: val for key, val in\n",
+    "                    model.class_to_idx.items()}\n",
+    "\n",
+    "    #print(f'class_to_idx: {class_to_idx}')\n",
+    "    flower_names=[]\n",
+    "    for index in top_class:\n",
+    "        for k,v in model.class_to_idx.items():\n",
+    "            if index == v:\n",
+    "                flower_names.append(cat_to_name[str(index)])\n",
+    "\n",
+    "    #print(flower_names)\n",
+    "    return top_p, top_class,flower_names"
    ]
   },
   {
@@ -322,15 +572,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Display an image along with the top 5 classes"
+    "# TODO: Display an image along with the top 5 classes\n",
+    "# TODO: Display an image along with the top 5 classes\n",
+    "path = 'flowers/test/1/image_06743.jpg'\n",
+    "\n",
+    "top_p, top_class,flower_names = predict(path, model)\n",
+    "#print(top_class)\n",
+    "axs = imshow(path,cat_to_name[str(top_class[0])])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python397jvsc74a57bd03b8807096a6b827489448701e20a1ff262d7c4e03342af64e61d8bacbc6e3750",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.9.7 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
