--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -93,17 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c0235cf70> images under train\n",
-      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c0235cf10> images under valid\n",
-      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c00601130> images under test\n",
-      "<torch.utils.data.dataloader.DataLoader object at 0x7f8c0235cf70>\n"
+      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c0234d400> images under train\n",
+      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c0234d3d0> images under valid\n",
+      "Loaded <torch.utils.data.dataloader.DataLoader object at 0x7f8c0234d220> images under test\n",
+      "<torch.utils.data.dataloader.DataLoader object at 0x7f8c0234d400>\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,8 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "unexpected EOF, expected 405998282 more bytes. The file might be corrupted.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/kj/pf5xh8zs0354jdmdr594pxs80000gn/T/ipykernel_12283/1269225430.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mmodel\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mload_checkpoint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mPATH\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmodel\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/var/folders/kj/pf5xh8zs0354jdmdr594pxs80000gn/T/ipykernel_12283/430098350.py\u001B[0m in \u001B[0;36mload_checkpoint\u001B[0;34m(filepath)\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;31m# TODO: Write a function that loads a checkpoint and rebuilds the model\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0mload_checkpoint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfilepath\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 5\u001B[0;31m     \u001B[0mcheck_point\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mload\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfilepath\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      6\u001B[0m     \u001B[0mmodel\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mtorch_models\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mvgg16\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mpretrained\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mTrue\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/torch/serialization.py\u001B[0m in \u001B[0;36mload\u001B[0;34m(f, map_location, pickle_module, **pickle_load_args)\u001B[0m\n\u001B[1;32m    606\u001B[0m                     \u001B[0;32mreturn\u001B[0m \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mjit\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mload\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mopened_file\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    607\u001B[0m                 \u001B[0;32mreturn\u001B[0m \u001B[0m_load\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mopened_zipfile\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmap_location\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mpickle_module\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mpickle_load_args\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 608\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0m_legacy_load\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mopened_file\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmap_location\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mpickle_module\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mpickle_load_args\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    609\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    610\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/torch/serialization.py\u001B[0m in \u001B[0;36m_legacy_load\u001B[0;34m(f, map_location, pickle_module, **pickle_load_args)\u001B[0m\n\u001B[1;32m    792\u001B[0m     \u001B[0;32mfor\u001B[0m \u001B[0mkey\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mdeserialized_storage_keys\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    793\u001B[0m         \u001B[0;32massert\u001B[0m \u001B[0mkey\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mdeserialized_objects\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 794\u001B[0;31m         \u001B[0mdeserialized_objects\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mkey\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_set_from_file\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mf\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0moffset\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mf_should_read_directly\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    795\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0moffset\u001B[0m \u001B[0;32mis\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    796\u001B[0m             \u001B[0moffset\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mf\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtell\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mRuntimeError\u001B[0m: unexpected EOF, expected 405998282 more bytes. The file might be corrupted."
+     ]
+    }
+   ],
    "source": [
     "model = load_checkpoint(PATH)\n",
     "print(model)"
@@ -466,8 +481,8 @@
    "outputs": [],
    "source": [
     "#Reference: https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html#visualize-a-few-images\n",
-    "def imshow(image_loc,title=None):\n",
-    "    image_loc=image_processor(image_loc)\n",
+    "def imshow(image_loc, title=None):\n",
+    "    image_loc = image_processor(image_loc)\n",
     "    image_loc = image_loc.numpy().transpose((1, 2, 0))\n",
     "    mean = np.array([0.485, 0.456, 0.406])\n",
     "    std = np.array([0.229, 0.224, 0.225])\n",
@@ -522,8 +537,8 @@
    "outputs": [],
    "source": [
     "def predict(image_path, model, top_k=5):\n",
-    "    model=model.to('cpu')\n",
-    "    model=model.eval()\n",
+    "    model = model.to('cpu')\n",
+    "    model = model.eval()\n",
     "    with torch.no_grad():\n",
     "        output = model(image_processor(image_path).unsqueeze_(0))\n",
     "\n",
@@ -543,14 +558,14 @@
     "                    model.class_to_idx.items()}\n",
     "\n",
     "    #print(f'class_to_idx: {class_to_idx}')\n",
-    "    flower_names=[]\n",
+    "    flower_names = []\n",
     "    for index in top_class:\n",
-    "        for k,v in model.class_to_idx.items():\n",
+    "        for k, v in model.class_to_idx.items():\n",
     "            if index == v:\n",
     "                flower_names.append(cat_to_name[str(index)])\n",
     "\n",
     "    #print(flower_names)\n",
-    "    return top_p, top_class,flower_names"
+    "    return top_p, top_class, flower_names"
    ]
   },
   {
@@ -576,9 +591,9 @@
     "# TODO: Display an image along with the top 5 classes\n",
     "path = 'flowers/test/1/image_06743.jpg'\n",
     "\n",
-    "top_p, top_class,flower_names = predict(path, model)\n",
+    "top_p, top_class, flower_names = predict(path, model)\n",
     "#print(top_class)\n",
-    "axs = imshow(path,cat_to_name[str(top_class[0])])"
+    "axs = imshow(path, cat_to_name[str(top_class[0])])"
    ]
   }
  ],
